2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs:
	  Handle the delete key in TreeViewPad, so it will work event if the
	  shortcut is not defined.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/RegistryExtensionNode.cs,
	  MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectReference.cs,
	  MonoDevelop.AddinAuthoring/SelectRepositoryDialog.cs,
	  MonoDevelop.AddinAuthoring/NewRegistryDialog.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectExtension.cs,
	  MonoDevelop.AddinAuthoring/AddinData.cs,
	  MonoDevelop.AddinAuthoring.make, MonoDevelop.AddinAuthoring.addin.xml,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.mdp,
	  gtk-gui/MonoDevelop.AddinAuthoring.SelectRepositoryDialog.cs,
	  gtk-gui/MonoDevelop.AddinAuthoring.NewRegistryDialog.cs,
	  gtk-gui/gui.stetic: Improved add-in reference management and registry
	  selection.

2008-02-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs,
	  MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs,
	  MonoDevelop.AddinAuthoring/ExtensionPointsEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs,
	  MonoDevelop.AddinAuthoring/ExtensionSelectorDialog.cs,
	  MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs,
	  MonoDevelop.AddinAuthoring/NodeEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinProjectExtension.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs,
	  MonoDevelop.AddinAuthoring/AddinData.cs,
	  MonoDevelop.AddinAuthoring/RegistrySelector.cs,
	  MonoDevelop.AddinAuthoring.make, MonoDevelop.AddinAuthoring.addin.xml,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs,